# spark-ejercicios

./: .databrickscfg-template  .env-template  .gitignore  ENTORNO.md  LICENSE  README.md  entorno.ipynb  pyproject.toml  test-databricks-connect.py
config/: config.json
notebooks/: develop.ipynb  test-pyspark.ipynb
spark_flights_etl/: __init__.py  launcher.py
spark_flights_etl/etl/: featurizer.py
spark_flights_etl/flujos/: __init__.py  flujo_diario.py
tests/: test_featurizer.py
